Sun Sep 12 12:27:16 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Remove word_list since that file is no
	longer used. 

	* htdig/htdig.cc: Ensure -a and -i are followed for the word_db
	file. Fixes PR #638.

Sat Sep 11 00:11:28 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/StringMatch.h: Add back mistakenly deleted #ifndef/#define.

Fri Sep 10 23:07:43 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htmerge/*, htcommon/*, htdig/*, htlib/*: Add copyright information.

Fri Sep 10 11:33:50 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

 	* htnotify/htnotify.cc: Add copyright information.

	* htsearch/* htfuzzy/*: Ditto.

Fri Sep 10 15:24:44 1999  Loic Dachary  <loic@ceic.com>

	* htdig/Retriever.cc: change static WordList words to
	  object member. words.Close() at end of Start function
	  to make sure data is flushed by database.

	* htcommon/WordList.cc (Close): test isopen to prevent
	  ugly crash. Remove isopen test in calling functions.

Fri Sep 10 13:45:53 1999  Loic Dachary  <loic@ceic.com>

	* htcommon/WordList.h htcommon/WordList.cc: methods Collect
	  and Walk that factorise the behaviour of operator [], Prefix
	  and WordRefs. 

	* htcommon/WordList.h htcommon/WordList.cc: method Dump to
	  dump an ascii version of the word database.

	* htcommon/WordReference.h,htcommon/WordReference.cc: method Dump
	  to write an ascii version of a word.
	
	* htdig/htdig.cc: -t now also dump word database in ascii as
	  well.

	* htdoc/attrs.html,cf_byprog.html,cf_byname.html: added doc
	  for word_dump

Thu Sep  9 20:30:18 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htfuzzy/Fuzzy.h, htfuzzy/Fuzzy.cc, htfuzzy/Prefix.cc,
	htfuzzy/Regex.cc, htfuzzy/Speling.cc, htfuzzy/Substring.cc,
	htfuzzy/htfuzzy.cc, htfuzzy.h: Change to use WordList code instead
	of direct access to the database.

Thu Sep  9 14:55:59 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
